k8s/app-ab/app-deployment-ab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jogo-atual
  namespace: jogo
  labels:
    app: jogo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jogo
  template:
      metadata:
        labels:
          app: jogo
          greeting: atual
      spec:
        containers:
          - name: jogo
            image: jogokubernetes:latest
            imagePullPolicy: Never
            ports:
              - containerPort: 8080
                name: http
            livenessProbe:
              httpGet:
                path: /app/actuator/health/liveness
                port: 8080
              initialDelaySeconds: 30
            readinessProbe:
              httpGet:
                path: /app/actuator/health/readiness
                port: 8080
              initialDelaySeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jogo-ab
  namespace: jogo
  labels:
    app: jogo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jogo
  template:
    metadata:
      labels:
        app: jogo
        greeting: ab
    spec:
      containers:
        - name: jogo
          image: jogokubernetes-ab:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /app/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /app/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
