k8s/app-ab/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jogo
  namespace: teste
spec:
  selector:
    app: jogo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
